# auth-service

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  puff.yml
data/templates/: register.html
src/: main.rs  misc.rs  models.rs  schema.rs
src/controller/: auth.rs  mod.rs  recovery.rs  register.rs  sessions.rs  tfa.rs
src/repository/: auth.rs  session.rs  user.rs
src/service/: auth.rs  authvalidate.rs  hasher.rs  jwt.rs  mod.rs  redis.rs  session.rs  tfa.rs  time.rs  user.rs
src/service/logic/: mod.rs  recovery.rs  register.rs  tfa.rs
src/service/mail/: email.rs  mod.rs  service.rs
src/service/mail/mails/: mod.rs  recovery.rs  register.rs
src/service/session/: mod.rs  service.rs
