[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
data-encoding = "2.7.0"
hashbrown = "0.15.2"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
serde_json = "1.0.135"
sha2 = "0.10.8"

[dependencies.dixxxie]
version = "0.1.13"
git="https://github.com/serenitymcru/dixxxie"

[dependencies.totp-rs]
version = "5.6.0"
features = ["qr"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "r2d2", "chrono", "serde_json"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
